# debuglog

./: .gitignore  README.md  setup.cfg  setup.py
debuglog/: __init__.py  __main__.py  config.json  debuglog.py  measuretime.py
docs/: make.bat
docs/source/: conf.py  debuglog.rst  index.rst  modules.rst  tests.rst
tests/: __init__.py  test_debuglog.py  test_measuretime.py
