[metadata]
name = debuglog
version = attr: debuglog.__version__
author = Shota Takeda
description = Python logging package for debug
long_description = file: README.md
url = https://github.com/TAKE4548/debuglog
classifier =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Operating System :: POSIX
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
license = LICENSE

[options]
zip_safe = False
packages = find:
install_requires =
    matplotlib